Fix a minor inline CKEditor alignment issue

--- a/feincms3/static/feincms3/inline-ckeditor.css
+++ b/feincms3/static/feincms3/inline-ckeditor.css
@@ -15,6 +15,10 @@
   }
 }
 
+.inline-group[data-inline-type="tabular"] .cke_textarea_inline {
+  margin: 0;
+}
+
 .cke_textarea_inline *:not(hr, table, tr, th, td) {
   background: none !important;
   color: inherit !important;
